: Version 0.2.0
    - An option has been added to show the nucleation points on the board.
      Shared nucleation points are drawn in black colour
    - App can be set up to play human vs human, human vs computer and 
      computer vs computer games
    - Computer and human players can be selected to play as player1 or
      player2 in any kind of game
    - Settings of a game can be edited at all times through the preferences
      menu (in the settings menu) except for starting coordinates, which
      can only be selected when a new game is started
    - Type of heuristic (evaluation function) for computer players can 
      be edited through both the preferences dialog and when a new game is
      launched. 3 types of heuristic have been included in this release: 
      "NK weighted", "simple" and "random"
    - Starting coordinate can be edited when a new game is launched. They can
      also be edited if no pieces have been put down on the board
    - Piece edition improved for those pieces with only one possible
      configuration
    - Application is able to cancel a computing operation for a new game
      to start. In previous versions cancelling the current computing operation
      was only enabled when the human user wanted to close the application (new
      games had to wait until the worker thread had finished its calculations)
    - libglade dependency removed. Gtkbuilder is used instead
    - Executable in windows has reduced its size around 50%. Released zipped
      binary for windows has been also reduced around 30%
    - Fixed possible deadlock that might have occurred when the game was about
      to finish
    - Player handling through Game1v1 interface simplified in source code

24/04/2010: Version 0.1.6
    - Computer's latest piece deployed glows so human user can easily notice
      what was the latest move
    - App kills itself instead of hunging up when unexpected state occurs 
      if cumputing thread is busy